[gd_scene load_steps=4 format=3 uid="uid://cintegrated_expr_editor"]

[ext_resource type="Script" path="res://addons/flowkit/ui/modals/integrated_expression_editor.gd" id="1_editor"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_desc"]
bg_color = Color(0.15, 0.15, 0.18, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syntax"]
bg_color = Color(0.12, 0.12, 0.15, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="IntegratedExpressionEditor" type="PopupPanel"]
title = "Expression Editor"
initial_position = 2
size = Vector2i(900, 550)
borderless = false
keep_title_visible = true
unresizable = false
script = ExtResource("1_editor")

[node name="MainMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainVBox" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleBar" type="HBoxContainer" parent="MainMargin/MainVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainMargin/MainVBox/TitleBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Parameter Name"

[node name="ParamTypeLabel" type="Label" parent="MainMargin/MainVBox/TitleBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "(Type)"

[node name="Spacer" type="Control" parent="MainMargin/MainVBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpLabel" type="Label" parent="MainMargin/MainVBox/TitleBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "Double-click to insert expression"

[node name="InputSection" type="HBoxContainer" parent="MainMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ExpressionInput" type="LineEdit" parent="MainMargin/MainVBox/InputSection"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter value or expression..."
caret_blink = true

[node name="ContentSection" type="HSplitContainer" parent="MainMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 220

[node name="LeftPanel" type="VBoxContainer" parent="MainMargin/MainVBox/ContentSection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="SearchLabel" type="Label" parent="MainMargin/MainVBox/ContentSection/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Search Expressions"

[node name="SearchBox" type="LineEdit" parent="MainMargin/MainVBox/ContentSection/LeftPanel"]
layout_mode = 2
placeholder_text = "Type to search..."
clear_button_enabled = true

[node name="CategoriesLabel" type="Label" parent="MainMargin/MainVBox/ContentSection/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Categories"

[node name="CategoryTree" type="Tree" parent="MainMargin/MainVBox/ContentSection/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true
hide_folding = true

[node name="RightPanel" type="VBoxContainer" parent="MainMargin/MainVBox/ContentSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="ExpressionsLabel" type="Label" parent="MainMargin/MainVBox/ContentSection/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Available Expressions"

[node name="ExpressionsList" type="ItemList" parent="MainMargin/MainVBox/ContentSection/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
allow_reselect = true

[node name="SyntaxPanel" type="PanelContainer" parent="MainMargin/MainVBox/ContentSection/RightPanel"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_syntax")

[node name="SyntaxMargin" type="MarginContainer" parent="MainMargin/MainVBox/ContentSection/RightPanel/SyntaxPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="SyntaxHBox" type="HBoxContainer" parent="MainMargin/MainVBox/ContentSection/RightPanel/SyntaxPanel/SyntaxMargin"]
layout_mode = 2

[node name="SyntaxTitle" type="Label" parent="MainMargin/MainVBox/ContentSection/RightPanel/SyntaxPanel/SyntaxMargin/SyntaxHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Syntax: "

[node name="SyntaxLabel" type="Label" parent="MainMargin/MainVBox/ContentSection/RightPanel/SyntaxPanel/SyntaxMargin/SyntaxHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = ""

[node name="DescriptionPanel" type="PanelContainer" parent="MainMargin/MainVBox/ContentSection/RightPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_desc")

[node name="DescriptionMargin" type="MarginContainer" parent="MainMargin/MainVBox/ContentSection/RightPanel/DescriptionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="DescriptionLabel" type="RichTextLabel" parent="MainMargin/MainVBox/ContentSection/RightPanel/DescriptionPanel/DescriptionMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Select an expression to see details"
fit_content = false
scroll_active = true

[node name="ButtonBar" type="HBoxContainer" parent="MainMargin/MainVBox"]
layout_mode = 2
alignment = 2

[node name="Spacer" type="Control" parent="MainMargin/MainVBox/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="MainMargin/MainVBox/ButtonBar"]
custom_minimum_size = Vector2(90, 32)
layout_mode = 2
text = "Cancel"

[node name="OKButton" type="Button" parent="MainMargin/MainVBox/ButtonBar"]
custom_minimum_size = Vector2(90, 32)
layout_mode = 2
text = "OK"
